# deip-node

./: .editorconfig  .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: deploy_docs.yml
ci/: Dockerfile  README.md  benchmark.sh  build_bin.sh  build_img.sh  deploy.sh  docker-compose.yml  docker-compose2.yml  event-proxy.toml  multi-node.sh  multi-node.yml  purge-chain.sh  single-node.yml
ci/build_bin/: custom_transaction.sh
ci/builder/: .dockerignore  .gitignore  Dockerfile  build.sh  cargo.sh
ci/vedai-dev-server/deploy/ansible/: deploy-substrate-node.yml  inventory.yml
ci/vedai-dev-server/deploy/ansible/roles/deploy/tasks/: main.yml
ci/vedai-dev-server/deploy/ansible/roles/deploy/templates/: docker-compose.yml
ci/vedai-dev-server/deploy/ansible/roles/deploy/vars/: main.yml
deip_common/deip_asset_lock/: Cargo.toml
deip_common/deip_asset_lock/src/: lib.rs
deip_common/deip_asset_system/: Cargo.toml
deip_common/deip_asset_system/src/: asset.rs  error.rs  fnft.rs  fnft_impl.rs  ft.rs  ft_impl.rs  investment_opportunity.rs  lib.rs  nft.rs  nft_impl.rs
deip_common/deip_assets_error/: Cargo.toml
deip_common/deip_assets_error/src/: lib.rs
deip_common/deip_call/: Cargo.toml
deip_common/deip_call/src/: assets_call_args.rs  lib.rs
deip_common/deip_projects_info/: Cargo.toml
deip_common/deip_projects_info/src/: lib.rs
deip_common/deip_rpc/: Cargo.toml
deip_common/deip_rpc/src/: error.rs  lib.rs
deip_common/deip_serializable_u128/: Cargo.toml
deip_common/deip_serializable_u128/src/: lib.rs
deip_common/deip_storage_ops/: Cargo.toml
deip_common/deip_storage_ops/src/: lib.rs
deip_common/deip_tenant/: Cargo.toml
deip_common/deip_tenant/src/: lib.rs
deip_common/deip_transaction_ctx/: Cargo.toml
deip_common/deip_transaction_ctx/src/: lib.rs  portal_ctx.rs  transaction_ctx.rs
docs/: Functions.md
event-proxy/: Cargo.toml  README.md
event-proxy-client/: Cargo.toml  build.sh
event-proxy-client/src/: main.rs
event-proxy/src/: config.rs  default_config.toml  events.rs  main.rs  metadata.scale  runtime.rs  runtime_api.rs  subxt_impl.rs  types.rs
event-proxy/src/actor/: io.rs  mod.rs
event-proxy/src/app/: actor_io.rs  blockchain.rs  message_broker.rs  mod.rs  offchain.rs
event-proxy/src/events/: mapping.rs  mod.rs
event-proxy/src/frame/: assets.rs  deip.rs  deip_assets.rs  deip_dao.rs  deip_investment_opportunity.rs  deip_proposal.rs  mod.rs  octopus_appchain.rs  octopus_lpos.rs
node/: Cargo.toml  build.sh
node/res/: octopus-mainnet.json  octopus-testnet.json
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
oct-audit/: audit-function-spec.md
pallets/: types.json
pallets/deip/: Cargo.toml  README.md
pallets/deip/src/: api.rs  asset.rs  benchmarking.rs  contract.rs  contribution.rs  investment_opportunity.rs  lib.rs  mock.rs  review.rs  tests.rs  traits.rs  weights.rs
pallets/deip_assets/: Cargo.toml  README.md
pallets/deip_assets/src/: impl_fungibles.rs  lib.rs  serializable.rs  traits.rs
pallets/deip_balances/: Cargo.toml
pallets/deip_balances/src/: lib.rs
pallets/deip_crowdfunding/: Cargo.toml
pallets/deip_crowdfunding/src/: crowdfunding.rs  lib.rs  module.rs  weights.rs
pallets/deip_dao/: Cargo.toml  README.md
pallets/deip_dao/src/: api.rs  benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/deip_ecosystem_fund/: Cargo.toml
pallets/deip_ecosystem_fund/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/deip_f_nft/: .weight-template.hbs  Cargo.toml
pallets/deip_f_nft/src/: benchmarking.rs  impl_asset_system.rs  impl_fungibles.rs  lib.rs  mock.rs  traits.rs  types.rs  weights.rs
pallets/deip_investment_opportunity/: Cargo.toml
pallets/deip_investment_opportunity/src/: benchmarking.rs  crowdfunding.rs  lib.rs  module.rs  tests.rs
pallets/deip_market/: Cargo.toml  README.md
pallets/deip_market/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/deip_nft/: Cargo.toml
pallets/deip_nft/src/: impl_asset_system.rs  impl_fungibles.rs  impl_nonfungibles.rs  lib.rs  types.rs
pallets/deip_nft_chest/: Cargo.toml
pallets/deip_nft_chest/src/: lib.rs  types.rs
pallets/deip_portal/: Cargo.toml  README.md
pallets/deip_portal/src/: benchmarking.rs  lib.rs  module.rs  portal.rs  tests.rs  transaction_ctx.rs  weights.rs
pallets/deip_portal/src/extensions/: check_portal.rs  mod.rs
pallets/deip_proposal/: Cargo.toml  README.md
pallets/deip_proposal/src/: batch_assertions.rs  batch_item_kind.rs  batch_tree.rs  benchmarking.rs  entrypoint.rs  lib.rs  proposal.rs  storage.rs  tests.rs  weights.rs
pallets/deip_stake_voting/: Cargo.toml  README.md
pallets/deip_stake_voting/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/deip_uniques/: Cargo.toml  README.md
pallets/deip_uniques/src/: impl_nonfungibles.rs  lib.rs
pallets/deip_vesting/: Cargo.toml  README.md
pallets/deip_vesting/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
rpc/deip_assets_rpc/: Cargo.toml
rpc/deip_assets_rpc/src/: lib.rs  types.rs
rpc/deip_dao_rpc/: Cargo.toml
rpc/deip_dao_rpc/src/: lib.rs  types.rs
rpc/deip_proposal_rpc/: Cargo.toml
rpc/deip_proposal_rpc/src/: lib.rs  types.rs
rpc/deip_rpc/: Cargo.toml
rpc/deip_rpc/src/: lib.rs  types.rs
rpc/deip_uniques_rpc/: Cargo.toml
rpc/deip_uniques_rpc/src/: lib.rs  types.rs
runtime/: Cargo.toml
runtime/src/: deip_account.rs  f_nft.rs  lib.rs  subxt_impl.rs
