[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'Event proxy Node->Kafka'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'event-proxy'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '3.0.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-subxt = { git = "https://github.com/DEIPworld/substrate-subxt.git", rev = "297bf5354de99df1ee34c54901d1c800957f5928" }
#substrate-subxt = { path = "../../substrate-subxt" }
jsonrpsee-ws-client = { version = "0.2.0", default-features = false , features = ["tokio1"] }
rdkafka = { version = "=0.26.0", default_features = true, features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
async-trait = "0.1.51"
futures = "0.3.16"
toml = "=0.5.8"

sp-core = "3.0.0"
sp-std = "3.0.0"
sp-runtime = "3.0.0"

pallet-deip-proposal = { path = "../pallets/deip_proposal" }
pallet-deip-dao = { path = "../pallets/deip_dao" }
pallet-deip-portal = { path = "../pallets/deip_portal" }
pallet-deip = { path = "../pallets/deip"}
pallet-deip-assets = { path = "../pallets/deip_assets"}
pallet-deip-vesting = { path = "../pallets/deip_vesting"}
node-template-runtime = { package = 'appchain-deip-runtime', path = '../runtime'}
deip-call = { package = "common-deip-call", path = "../deip_common/deip_call" }

codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
hex = "0.4.3"

log = "0.4.14"
flexi_logger = "0.18.0"
clap = "2.33.3"

frame-support = "3.0.0"

[dependencies.pallet-octopus-lpos]
default-features = false
git = "https://github.com/octopus-network/octopus-pallets"
rev = "17d2df3a"

[dependencies.pallet-octopus-appchain]
default-features = false
git = "https://github.com/octopus-network/octopus-pallets"
rev = "17d2df3a"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '3.0.0'

[workspace]

[features]
default = ["octopus"]
octopus = ["substrate-subxt/octopus"]

[patch."https://github.com/paritytech/substrate"]
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-metadata = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-multisig = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-utility = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-vesting = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }

[patch.crates-io]
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-metadata = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-multisig = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-utility = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-vesting = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
