[package]
name = "deip-asset-lock"
version = "0.1.0"
edition = "2018"

[dependencies]
pallet-assets = { path = "../../../substrate/frame/assets", default-features = false }
pallet-uniques = { path = "../../../substrate/frame/uniques", default-features = false }

[features]
default = ["std"]
std = [
    "pallet-assets/std",
    "pallet-uniques/std",
]
