[package]
name = "deip-asset-lock"
version = "0.1.0"
edition = "2018"

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
pallet-assets = { path = "../../../substrate/frame/assets", default-features = false }
pallet-uniques = { path = "../../../substrate/frame/uniques", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-uniques/std",
]
